--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ var/
 *.egg
 
 secret.py
+lastID.txt
+lastID.txt~
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
